--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
